<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tow_tractor</name>
  <version>0.0.0</version>
  <description>Tow Tractor dependecies</description>
  <maintainer email="mah2002moud@gmail.com">Mahmoud Mostafa</maintainer>
  <license>Apache 2.0</license>
  <author>Mahmoud Mostafa</author>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

