<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tow_tractor_bringup</name>
  <version>0.0.0</version>
  <description> Bring up files for the tow_tractor simulation and hardware.</description>
  <maintainer email="mah2002moud@gmail.com">mahmoud</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch_xml</exec_depend>
  <exec_depend>launch_yaml</exec_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <exec_depend>tow_tractor</exec_depend>
  <exec_depend>tow_tractor_gazebo</exec_depend>
  <exec_depend>tow_tractor_hardware</exec_depend>
  <exec_depend>tow_tractor_description</exec_depend>
  <exec_depend>tow_tractor_control</exec_depend>
  <exec_depend>tow_tractor_slam</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
