<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tow_tractor_hardware</name>
  <version>0.0.0</version>
  <description>
    ROS 2 hardware interface drivers for Tow Tractor, providing Serial, SPI, and CAN communication layers for sensors and actuators.
  </description>
  <maintainer email="mah2002moud@gmail.com">mahmoud</maintainer>
  <license>Proprietary - For learning and educational use only. Not for commercial or production use.</license>

  <depend>rclpy</depend>
  <depend>can_msgs</depend>
  <depend>pyserial</depend>
  <depend>spidev</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
